--- a/source/scss/base/_base.scss
+++ b/source/scss/base/_base.scss
@@ -1,38 +1,46 @@
 /* Basic  Styles*/
+
 //сброс стилей для кнопок форм
-[role="button"],
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-button {
-    -webkit-box-sizing: content-box;
-       -moz-box-sizing: content-box;
-            box-sizing: content-box;
+[role="button"], input[type="submit"], input[type="reset"], input[type="button"], button {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
+
 
 /* Reset `button` and button-style `input` default styles */
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-button {
-    background: none;
-    border: 0;
-    color: inherit;
-    /* cursor: default; */
-    font: inherit;
-    line-height: normal;
-    overflow: visible;
-    padding: 0;
-    -webkit-appearance: button; /* for input */
-    -webkit-user-select: none; /* for button */
-       -moz-user-select: none;
-        -ms-user-select: none;
+
+input[type="submit"], input[type="reset"], input[type="button"], button {
+  background: none;
+  border: 0;
+  color: inherit;
+  /* cursor: default; */
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  -webkit-appearance: button;
+  /* for input */
+  -webkit-user-select: none;
+  /* for button */
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+body {
+  font-family: $basic-font;
+  -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+//center wrappers
+.wrapper-wide {
+  max-width: 1170px;
+  margin-left: 99px;
 }
 
-//center wrapper
+.wrapper-narrow {
+  max-width: 1030px;
+}
 
 a {
   text-decoration: none;
 }
-
-
