--- a/source/scss/helpers/_variables.scss
+++ b/source/scss/helpers/_variables.scss
@@ -1,13 +1,13 @@
 $browser-context: 16; // Default
 
 //bg-colors
-
-
+$basic-yellow: #ffde00;
+$wet: "wer";
 
 //text-color
 
 
 
-//fonts
 
+$font-family-logo: "la_chatte_a_mamanregular", sans-serif;
 
