--- a/source/scss/base/_variables.scss
+++ b/source/scss/base/_variables.scss
@@ -6,6 +6,12 @@ $bg-navigation: #2a2a2a;
 $color-navigation: #828282;
 $article-text: #bababa;
 $article-link-border: #a7a7a7;
+$color-basic-title: #909090;
+$color-basic-text: #767676;
+$bg-dirty-white: #f8f8f8;
+$bg-light-grey: #f1f1f1;
+$color-benefit-title-dark: #343434;
+$color-benefit-desc-dark: #343434;
 
 
 //fonts
