--- a/source/scss/components/_main-nav.scss
+++ b/source/scss/components/_main-nav.scss
@@ -12,6 +12,10 @@
   height: 50px;
   outline: none;
   background: $basic-yellow;
+  transition: all 0.2s;
+  &:hover {
+    background: darken($basic-yellow, 15%);
+  }
 }
 
 //стилизация кнопки-бургера
