--- a/source/scss/components/_banner.scss
+++ b/source/scss/components/_banner.scss
@@ -1,3 +1,5 @@
+/*----------  Header Banner styles  ----------*/
+
 .banner__container {
   // outline: 1px solid grey;
   overflow: hidden;
@@ -28,33 +30,33 @@
   font-weight: 300;
   font-style: 15px;
   line-height: 1.73;
-  max-width: 800px;
-  margin-bottom: 73px;
-  color: $article-text;
-  max-height: 75px;
   position: relative;
   overflow: hidden;
-
+  max-width: 800px;
+  max-height: 75px;
+  margin-bottom: 73px;
+  color: $article-text;
 }
 
 .article__link {
   font-size: 15px;
   line-height: percentage(47/15);
   padding: 15px 39px;
+  transition: all .1s linear;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: white;
   border: 2px solid white;
-  transition:all .1s linear;
   &:hover, &:active {
     color: $basic-yellow;
     border: 2px solid $basic-yellow;
   }
   &:active {
-    opacity: 0.5;
+    opacity: .5;
   }
 }
 
+//стилизация элементов управления, добавляемых слайдером (делается только через !important)
 aside[id='slidr-div-breadcrumbs'] {
   position: absolute !important;
   right: 50% !important;
@@ -66,8 +68,8 @@ aside[id='slidr-div-breadcrumbs'] .slidr-breadcrumbs li {
   width: 39px !important;
   height: 8px !important;
   margin-left: 4px !important;
-  border-radius: 0 !important;
   cursor: pointer !important;
+  border-radius: 0 !important;
 }
 
 aside[id='slidr-div-breadcrumbs'] .slidr-breadcrumbs li.normal {
@@ -75,7 +77,7 @@ aside[id='slidr-div-breadcrumbs'] .slidr-breadcrumbs li.normal {
 }
 
 aside[id='slidr-div-breadcrumbs'] .slidr-breadcrumbs li.active {
+  margin: 3px !important;
   border-color: $basic-yellow !important;
   background-color: $basic-yellow !important;
-  margin: 3px !important;
 }
