--- a/source/scss/base/_variables.scss
+++ b/source/scss/base/_variables.scss
@@ -9,11 +9,23 @@ $article-link-border: #a7a7a7;
 $color-basic-title: #909090;
 $color-basic-text: #767676;
 $bg-dirty-white: #f8f8f8;
+$bg-dirty-white2: #f5f5f5;
 $bg-light-grey: #f1f1f1;
-$color-benefit-title-dark: #343434;
-$color-benefit-desc-dark: #343434;
+$color-benefit-dark: #343434;
+$bg-portfolio-dark: #252525;
+$color-figure-title: #575757;
+$bg-gallery: #c4b96b;
+$color-portfolio-text: #8b8b8b;
+$color-input-grey: #535353;
+$border-input-grey: #a1a1a1;
+$bg-footer-grey: #efefef;
+$bg-stripe: #d1d1d1;
+$bg-stripe2: #cacaca;
 
-
+//icons-colors
+$bg-fb-icon: #589ae3;
+$bg-dribble-icon: #e2436c;
+$bg-behance-icon: #437fe2;
 //fonts
 $font-family-logo: "la_chatte_a_mamanregular", serif;
 $basic-font: 'Open Sans', sans-serif;
