--- a/source/scss/base/_webfonts.scss
+++ b/source/scss/base/_webfonts.scss
@@ -1,12 +1,14 @@
-@font-face {
-    font-family: 'la_chatte_a_mamanregular';
-    src: url('../fonts/la_chatte_a_maman-webfont.eot');
-    src: url('../fonts/la_chatte_a_maman-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/la_chatte_a_maman-webfont.woff2') format('woff2'),
-         url('../fonts/la_chatte_a_maman-webfont.woff') format('woff'),
-         url('../fonts/la_chatte_a_maman-webfont.ttf') format('truetype'),
-         url('../fonts/la_chatte_a_maman-webfont.svg#la_chatte_a_mamanregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+/*=============================
+=            Fonts            =
+=============================*/
 
+@font-face {
+  font-family: 'la_chatte_a_mamanregular';
+  src: url('../fonts/la_chatte_a_maman-webfont.eot');
+  src: url('../fonts/la_chatte_a_maman-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/la_chatte_a_maman-webfont.woff2') format('woff2'), url('../fonts/la_chatte_a_maman-webfont.woff') format('woff'), url('../fonts/la_chatte_a_maman-webfont.ttf') format('truetype'), url('../fonts/la_chatte_a_maman-webfont.svg#la_chatte_a_mamanregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
+
+
+/*=====  End of Fonts  ======*/
