--- a/source/scss/components/_main-nav.scss
+++ b/source/scss/components/_main-nav.scss
@@ -13,6 +13,7 @@
   outline: none;
   background: $basic-yellow;
   transition: all 0.2s;
+  margin-right: 2px;
   &:hover {
     background: darken($basic-yellow, 15%);
   }
