--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -11,7 +11,11 @@
 @import 'base/_base';
 
 //components
-@import 'components/_header.scss';
-@import 'components/_about.scss';
+@import 'components/_header';
+@import 'components/_about';
+@import 'components/_portfolio';
+@import 'components/_contact';
+@import 'components/_footer';
 
-
+//stripes decor 
+@import 'components/_stripes'
