removed radiobutton label animation

--- a/source/scss/components/_portfolio.scss
+++ b/source/scss/components/_portfolio.scss
@@ -43,10 +43,9 @@
 
 .gallery__filter {
   display: none;
-  &:checked + .gallery__filterlabel {
-    animation: shake 150ms 3 linear; //настройка анимации в base.scss
-    border: 1px solid $basic-yellow;
-  }
+  // &:checked + .gallery__filterlabel {
+    // animation: shake 150ms 3 linear; //пока убрал (в IE11 смотрится ужасно)
+  // }
 }
 
 .gallery__filterlabel {
