removed percentage fn from line-height

--- a/source/scss/components/_banner.scss
+++ b/source/scss/components/_banner.scss
@@ -45,7 +45,7 @@
 
 .article__link {
   font-size: 15px;
-  line-height: percentage(47/15);
+  line-height: (47/15);
   padding: 15px 39px;
   transition: all .1s linear;
   letter-spacing: 1px;
