--- a/source/css/main.css
+++ b/source/css/main.css
@@ -656,7 +656,7 @@ a {
 
 .article__link {
   font-size: 15px;
-  line-height: 313.333333333%;
+  line-height: 3.1333333333;
   padding: 15px 39px;
   transition: all 0.1s linear;
   letter-spacing: 1px;
@@ -788,7 +788,7 @@ aside[id='slidr-div-breadcrumbs'] .slidr-breadcrumbs li.active {
 .benefit__desc {
   color: #343434;
   font-size: 14px;
-  line-height: 185.714285714%;
+  line-height: 1.8571428571;
   font-weight: 300;
   margin-top: 10px; }
 
